--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+
+  <ul>
+    <div class="nav">
+      <li><%= link_to "Sign Up", new_user_path %></li>
+      <li>weeee!</li>
+    </div>
+  </ul>
+
+
 <%= yield %>
 
 </body>
